fix (structure): add index.html

--- a/watch.html
+++ b/watch.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="button-navigation">
             <a href="watch.html">     <button class="nav-button on"> <i class="fa-solid fa-clock"></i>          </button></a>
-            <a href="timer.html">     <button class="nav-button off"> <i class="fa-solid fa-hourglass-half"></i> </button></a>
+            <a href="index.html">     <button class="nav-button off"> <i class="fa-solid fa-hourglass-half"></i> </button></a>
             <a href="stopwatch.html"> <button class="nav-button off">  <i class="fa-solid fa-stopwatch"></i>      </button></a>
         </div>
         <div class="button-colorMode">
