add empty row to stopwatch

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -56,6 +56,9 @@
                 <th>Total Time</th>
             </thead>
             <tbody>
+                <tr class="empty">
+                    <td colspan="3" style="text-align:center;">No laps</td>
+                </tr>
             </tbody>
         </table>
     </div>
