limit values on timer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <!-- clock -->
     <section class="timer center">
-        <p id="clock" class="timer-text">
+        <div id="clock" class="timer-text">
             <div class="select-number">
                 <button class="plus"></button>
                 <span id="minutes" contenteditable="true">00</span>
@@ -46,7 +46,7 @@
                 <span id="milliseconds" contenteditable="true">00</span>
                 <button class="minus"></button>
             </div>
-        </p>
+        </div>
     </section>
     <section class="center">
         <button type="button" id="button-reset" class="button off">         <i class="fa-solid fa-rotate-right"></i> </button>
